Adicionei outro parágrafo Lorem

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,8 @@
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptas optio ratione dolor similique aperiam non repellat autem quae molestiae, sunt doloribus voluptates accusamus, aliquam quam ea itaque in blanditiis.
     </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore voluptas quaerat ipsum dolorum quasi eos, nobis deserunt ex quisquam fugit minima at atque. Ducimus voluptas quasi consequuntur quae alias molestias?
+    </p>
 </body>
 </html>
